--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -1,4 +1,5 @@
 $black: #232323;
-$background: #ffdf8c;
+$background-color: #ffdf8c;
 $gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$accent-color: #fe5f1e;
+$accent-hover-color: #df5925;
