--- a/src/components/PizzasFilter/PizzasFilter.scss
+++ b/src/components/PizzasFilter/PizzasFilter.scss
@@ -21,21 +21,47 @@
     color: #232323;
     padding: 10px 20px;
     border-radius: 30px;
-    transition: all 0.5s ease;
+    transition: all 0.3s ease;
     &--active {
       color: #fff;
       background-color: #232323;
     }
   }
   &__sort {
+    position: relative;
     display: flex;
     align-items: center;
     gap: 10px;
+    max-width: 500px;
   }
   &__sort-type {
     cursor: pointer;
     color: $accent-color;
     border-bottom: 1px dotted $accent-color;
+  }
+  &__sort-popup {
+    position: absolute;
+    left: 280px;
+    top: 0;
+    background: #ffffff;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  &__sort-list {
+    overflow: hidden;
+  }
+  &__sort-list-item {
+    padding: 12px 20px;
+    cursor: pointer;
+    &--active,
+    &:hover {
+      background: rgba(254, 95, 30, 0.05);
+    }
+    &--active {
+      font-weight: bold;
+      color: $accent-color;
+    }
   }
   &__search {
     display: flex;
